<resources>
    <string name="app_name">Peer Locator</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App Logo</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="facebook_app_id">162243322477444</string>
    <string name="fb_login_protocol_scheme">fb162243322477444</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="ok">OK</string>
    <string name="title_location_permission">Location Access</string>
    <string name="text_location_permission">You need to allow location access to continue</string>
    <string name="create_new_circle">Create New Circle</string>
    <plurals name="members_count">
        <item quantity="one">%d/20 member</item>
        <item quantity="other">%d/20 members</item>
    </plurals>
    <plurals name="friends_count">
        <item quantity="one">%d Friend</item>
        <item quantity="other">%d Friends</item>
    </plurals>
    <plurals name="circles_count">
        <item quantity="one">%d Circle</item>
        <item quantity="other">%d Circles</item>
    </plurals>
    <plurals name="common_circles_count">
        <item quantity="zero">No circles in common</item>
        <item quantity="one">%d circles in common</item>
        <item quantity="other">%d circles in common</item>
    </plurals>
    <string name="profile_picture">Profile Picture</string>
    <string name="send_request">Send Request</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="unknown_privacy_warning">Profile details are visible to friends only</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="block">Block</string>
    <string name="info_profile_image">info_profile_image</string>
    <string name="circles_in_common">Circles in Common</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="title_activity_friend">Map</string>
    <string name="find_peer">Find Peer</string>
    <string name="find_me">Find Me</string>
    <string name="members">Members</string>
    <string name="add_members">Add members</string>
    <string name="leave_circle">Leave Circle</string>
    <string name="admin">Admin</string>
    <string name="you">You</string>
    <string name="email_label">Email : </string>
    <string name="phone_label">Phone : </string>
    <string name="online">Online </string>
    <string name="visible_to_unknown">Visible to Unknown </string>
    <string name="block_list">Block List</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log out</string>
    <string name="people_blocked_by_you">People Blocked by You</string>
    <string name="unblock_selected">Unblock Selected</string>
    <string name="image_size_warning">Image size should not exceed 1 MB</string>
    <string name="image_type_warning">Image should be of JPEG/JPG format</string>
    <string name="add_new_friend">Add New Friend</string>
    <string name="no_friends_found">No Friends Found</string>
    <string name="no_circles_found">No Circles Found</string>
    <string name="no_invitations">No Invitations</string>
    <string name="no_one_in_your_block_list">No one in your block list</string>
    <string name="enter_circle_name">Enter Circle Name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="circle_size_warning">Circle Size should not exceed 20 members</string>
    <string name="add_selected">Add Selected</string>
    <string name="error_message">Some Error Occurred</string>
    <string name="creating_circle">Creating Circle</string>
    <string name="adding_members">Adding Members</string>
    <string name="circle_created">Circle Created</string>
    <string name="finishing_up">Finishing Up</string>
    <string name="inviting_members">Inviting Members</string>
    <string name="please_wait">Please Wait</string>
    <string name="no_users_found">No Users Found</string>
    <string name="invitation_sent">Invitation Sent</string>
    <string name="search_for_people">Search for People</string>
    <string name="sending_invitation">Sending Invitation</string>
    <string name="sent_invitations">Sent Invitations</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="invitation_rejected">Invitation Rejected</string>
    <string name="continue_with_phone">Continue With Phone</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="sending_otp">Sending OTP</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number with Country Code</string>
    <string name="empty_phone_error">Please enter a valid phone number</string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="enter_OTP">Enter OTP sent to your mobile number</string>
    <string name="create_profile">Create Profile</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="invalid_name_warning">Please Enter a valid Name</string>
    <string name="signing_up">Signing Up</string>
    <string name="inaccessible_user_warning">You are not allowed to access this user</string>
    <string name="remove_member_title">Remove Member</string>
    <string name="allow_background_location_access">Allow Background Location Access</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="foregroung_location_access">Allow location when app is closed</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="more_apps">More Apps</string>
</resources>